EPBDS-15425 Improve performance of ProjectDependencyResolver#getProjectDependencies